# name: test_get[uvloop-False]
  <class 'dict'> {
    'diff': <class 'dict'> {
      'foo': 'bar',
    },
    'id': 'baz.2',
    'reference': <class 'dict'> {
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    },
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
# name: test_get[uvloop-True]
  <class 'dict'> {
    'diff': 'loaded',
    'id': 'baz.2',
    'reference': <class 'dict'> {
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Reference A',
    },
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
  }
---
